# Rhyme

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RhymeGoals.drawio  out.asm  tree.txt
Rhyme/: CMakeLists.txt
Rhyme/src/: MemoryPool.cpp  MemoryPool.h  Rhyme.cpp  rhypch.cpp  rhypch.h  test.rhy
Rhyme/src/Compiler/: Generator.cpp  Generator.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
Rhyme/src/Core/: Core.h  ExceptionHandler.cpp  ExceptionHandler.h  MemoryPool.cpp  MemoryPool.h
Rhyme/src/Utils/: ExceptionHandler.h  PlatformDetection.h
